--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Welcome to MyUniverse!</h1>
         <h3>There you can rate books, movies, games and music, and share your profile with friends!</h3>
-        <h3 class="link"><a href="">Sign Up</a></h3>
-        <h3 class="link"><a href="">Sign In</a></h3>
+        <h3 class="link"><a href="registration">Sign Up</a></h3>
+        <h3 class="link"><a href="login">Sign In</a></h3>
     </body>
 </html>
