--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -35,3 +35,19 @@
     color:white;
     margin: 10px;
 }
+
+.bar-profileInfo {
+    list-style-type: none;
+    text-align:right;
+    font-size: 17px;
+    margin-top: 4px;
+    margin-right: 32px;
+    margin-left: auto;
+}
+.username {
+    font-size: 25px;
+}
+.bar-profileInfo a {
+    color:white;
+    margin: 10px;
+}
