--- a/frontend/src/pages/Search/Search.css
+++ b/frontend/src/pages/Search/Search.css
@@ -28,3 +28,23 @@
     align-items: center;
     cursor: pointer;
 }
+
+.selectedEntity {
+    text-align: center;
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.gameStats {
+    margin: -5px;
+}
+
+.selectedEntity label {
+    margin: 5px;
+}
+
+.selectedEntity button {
+    margin-top: 1rem;
+}
