--- a/frontend/src/pages/Search/Search.css
+++ b/frontend/src/pages/Search/Search.css
@@ -1,3 +1,13 @@
+.searchDiv {
+    position: absolute;
+    top: 12%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .search-bar {
     font-size: 20px;
     text-align: center;
@@ -15,9 +25,8 @@ select {
 
 .searchResults
 {
-    margin-left: 488px;
+    margin-left: 0%;
     width: 905px;
-    height: 500px;
     background-color: white;
     overflow: scroll;
     height: 350px;
