small style fixes; handling cases when user is not logged

--- a/frontend/src/components/ItemModal/ItemModal.css
+++ b/frontend/src/components/ItemModal/ItemModal.css
@@ -53,6 +53,11 @@ label {
     margin-right: -9rem;
 }
 
+.inputRating h3 {
+    margin-left: 10rem;
+    margin-right: -9rem;
+}
+
 textarea {
     resize: none;
 }
